--- a/apache-php/httpd.conf
+++ b/apache-php/httpd.conf
@@ -215,8 +215,11 @@ ServerName localhost
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/usr/local/apache//htdocs"
-<Directory "/usr/local/apache//htdocs">
+# DocumentRoot "/usr/local/apache//htdocs"
+# <Directory "/usr/local/apache//htdocs">
+
+DocumentRoot "/www/wwwroot"
+<Directory "/www/wwwroot">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
